--- a/.github/workflows/sync-master.yml
+++ b/.github/workflows/sync-master.yml
@@ -32,6 +32,7 @@ jobs:
       BASE_BRANCH: master
       UPSTREAM_REPO: MaaAssistantArknights/MaaAssistantArknights
       UPSTREAM_BRANCH: master
+      WORKFLOW_PAT: ${{ secrets.WORKFLOW_PAT }}
 
     steps:
       - name: Checkout master
@@ -79,8 +80,6 @@ jobs:
             echo "::error::Merge resulted in conflicts. Resolve manually and re-run the workflow."
             exit 1
           }
-          # Drop workflow changes to avoid needing workflows permission on forks
-          git restore --staged --worktree .github/workflows || true
           git status -sb
 
       - name: Record updated commit
@@ -100,7 +99,11 @@ jobs:
         if: steps.change_status.outputs.changed == 'true'
         run: |
           set -euo pipefail
-          git push origin "$BASE_BRANCH"
+          if [ -z "${WORKFLOW_PAT:-}" ]; then
+            echo "::error::WORKFLOW_PAT secret is required to push changes (including workflow updates)"
+            exit 1
+          fi
+          git push "https://x-access-token:${WORKFLOW_PAT}@github.com/${{ github.repository }}" "$BASE_BRANCH"
 
 
   master-build:
